use staircaseCode instead of staircaseId through full stack
